fix(mediawiki): 🐛 fix incorrect message box wrapping in Special:UserLogin

--- a/skinStyles/mediawiki/special/mediawiki.special.userlogin.login.styles.less
+++ b/skinStyles/mediawiki/special/mediawiki.special.userlogin.login.styles.less
@@ -8,7 +8,7 @@
  * Date: 2022-11-23
 */
 #userloginForm {
-	> .mw-htmlform > div {
+	> .mw-htmlform > div:not( .mw-message-box ) {
 		// Allow to reorder the form through CSS
 		display: flex;
 		flex-direction: column;
